crates/aranya-policy-compiler/tests/data/type_errors/check_not_bool_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
5 |         check 0 else todo()
  |               ^ expected `bool` but found `int`
